CCD-2378: BEFTA framework 8.7.1 and high level data setup implementation
Additional changes required due to implementation of BEFTA framework 8.7.1.  Changes also include implementation of high level data setup.